feat: 添加检查Apikey功能和接口
